tests/integration/errors/address_of_rvalue.rsg
// TEST: compile_error
// EXPECT-ERROR: cannot take address of rvalue
module test_err

fn main() {
    px := &42
}
